# bgzf

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: build_and_test.yml  release.yml
benches/: compression.rs  multithreaded.rs
src/: lib.rs  multithreaded_reader.rs  multithreaded_writer.rs  reader.rs  writer.rs
