[package]
name = "bgzf"
version = "0.4.0"
edition = "2021"
authors = [
    "Seth Stadick <seth@fulcrumgenomics.com>"
]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/bgzf"
homepage = "https://github.com/fulcrumgenomics/bgzf"
repository = "https://github.com/fulcrumgenomics/bgzf"
description = "Utility library for working with explicitly BGZF compressed data"
keywords = ["bioinformatics", "genomic", "compression"]
categories = ["science", "compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
bytes = "1.9"
libdeflater = "1.0"
thiserror = "1.0"

# Channels for the per-instance multithreaded reader/writer. Optional: only the
# `multithreading-simple` feature pulls it in, so the default build stays lean.
kanal = { version = "0.1.1", optional = true }

[features]
# Each `MultithreadedReader`/`MultithreadedWriter` owns a dedicated pool of worker
# threads (as opposed to a future `multithreading-pooled` feature that would share
# one thread pool across many readers/writers).
multithreading-simple = ["dep:kanal"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
proptest = "1"

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "multithreaded"
harness = false
required-features = ["multithreading-simple"]
